--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -6,7 +6,7 @@ steps:
       - "bash ./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
-      IMAGE_TAG: "amazonlinux-2"
+      IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
