--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,76 +1,76 @@
 steps:
   - wait
 
-  - label: ":aws: Amazon_Linux 2 - Build"
-    command:
-      - "bash ./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
-    
-  - label: ":centos: CentOS 7.6 - Build"
-    command:
-      - "bash ./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env: 
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_CENTOS_7
+  # - label: ":aws: Amazon_Linux 2 - Build"
+  #   command:
+  #     - "bash ./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env:
+  #     IMAGE_TAG: "amazon_linux-2"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_AMAZON_LINUX_2
 
-  - label: ":ubuntu: Ubuntu 16.04 - Build"
-    command:
-      - "bash ./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env: 
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_16
+  # - label: ":centos: CentOS 7.6 - Build"
+  #   command:
+  #     - "bash ./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env: 
+  #     IMAGE_TAG: "centos-7.6"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_CENTOS_7
 
-  - label: ":ubuntu: Ubuntu 18.04 - Build"
-    command:
-      - "bash ./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_UBUNTU_18
+  # - label: ":ubuntu: Ubuntu 16.04 - Build"
+  #   command:
+  #     - "bash ./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env: 
+  #     IMAGE_TAG: "ubuntu-16.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_UBUNTU_16
 
-  - label: ":darwin: macOS 10.14 - Build"
-    command:
-      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && ./.cicd/build.sh"
-      - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-          modify-cpu: 12
-          modify-ram: 24
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-large-node-fleet"
-    skip: $SKIP_MOJAVE
+  # - label: ":ubuntu: Ubuntu 18.04 - Build"
+  #   command:
+  #     - "bash ./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env:
+  #     IMAGE_TAG: "ubuntu-18.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_UBUNTU_18
 
-  - wait
+  # - label: ":darwin: macOS 10.14 - Build"
+  #   command:
+  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+  #     - "cd eos && ./.cicd/build.sh"
+  #     - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   plugins:
+  #     - chef/anka#v0.5.1:
+  #         no-volume: true
+  #         inherit-environment-vars: true
+  #         vm-name: 10.14.4_6C_14G_40G
+  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+  #         modify-cpu: 12
+  #         modify-ram: 24
+  #         always-pull: true
+  #         debug: true
+  #         wait-network: true
+  #   agents:
+  #     - "queue=mac-anka-large-node-fleet"
+  #   skip: $SKIP_MOJAVE
+
+  # - wait
 
   - label: ":pipeline: Generate Serial Test Steps"  
     command: "./.cicd/generate-serial-tests.sh | buildkite-agent pipeline upload"
