--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -122,7 +122,7 @@ steps:
 
   # - label: ":darwin: macOS 10.14 - Unit Test"
   #   command:
-  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
+  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb"
   #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
   #     - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
   #     - "cd eos && bash ./.cicd/parallel-tests.sh"
