--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -173,7 +173,7 @@ steps:
     timeout: ${TIMEOUT:-10}
     skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
 
-  - label: ":centos: Centos 7.6 - Package Builder"
+  - label: ":centos: CentOS 7.6 - Package Builder"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' --agent-access-token $$BUILDKITE_AGENT_ACCESS_TOKEN && tar -xzf build.tar.gz"
       - "./.cicd/package-builder.sh"
