--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -3,7 +3,7 @@ steps:
 
   - label: ":aws: Amazon_Linux 2 - Build"
     command:
-      - "bash ./.cicd/build.sh"
+      - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
       IMAGE_TAG: "amazon_linux-2"
@@ -15,7 +15,7 @@ steps:
 
   - label: ":centos: CentOS 7.6 - Build"
     command:
-      - "bash ./.cicd/build.sh"
+      - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
       IMAGE_TAG: "centos-7.6"
@@ -27,7 +27,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 16.04 - Build"
     command:
-      - "bash ./.cicd/build.sh"
+      - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
@@ -39,7 +39,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Build"
     command:
-      - "bash ./.cicd/build.sh"
+      - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
     env:
       IMAGE_TAG: "ubuntu-18.04"
@@ -75,7 +75,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-tests.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -87,7 +87,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-tests.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -99,7 +99,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-tests.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -111,7 +111,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Unit Test"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/parallel-tests.sh"
+      - "./.cicd/parallel-tests.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -125,7 +125,7 @@ steps:
       - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && bash ./.cicd/parallel-tests.sh"
+      - "cd eos && ./.cicd/parallel-tests.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -150,7 +150,7 @@ steps:
   - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-tests.sh"
     env:
       IMAGE_TAG: "amazon_linux-2"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -162,7 +162,7 @@ steps:
   - label: ":centos: CentOS 7.6 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-tests.sh"
     env: 
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -174,7 +174,7 @@ steps:
   - label: ":ubuntu: Ubuntu 16.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-tests.sh"
     env: 
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -186,7 +186,7 @@ steps:
   - label: ":ubuntu: Ubuntu 18.04 - Long-Running Tests"
     command:
       - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "bash ./.cicd/long-running-tests.sh"
+      - "./.cicd/long-running-tests.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
@@ -200,7 +200,7 @@ steps:
       - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && bash ./.cicd/long-running-tests.sh"
+      - "cd eos && ./.cicd/long-running-tests.sh"
     plugins:
       - chef/anka#v0.5.1:
           no-volume: true
@@ -234,7 +234,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
     command:
-      - "bash ./.cicd/helpers/installation-build.sh"
+      - "./.cicd/helpers/installation-build.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
