workaround for LLVM <7.1 ABI compat
LLVM 7.0 & 7.0.1 suffer from an ABI incompatibility between GCC & Clang. If LLVM is built with GCC (as is the case for system-provided LLVMs in RHEL, Ubuntu, etc) using LLVM with a GCC compiled binary will result in a runtime fault. For more information see LLVM bug 39427

This workaround detects when Clang is being used to compile EOSIO with LLVM < 7.1 and compiles a “shim” with g++ to call the troublesome function that suffers from the ABI incompatibility. This workaround is operating under the assumption that LLVM 7.0 or 7.0.1 was compiled with g++ which it will be for any of EOSIO’s supported distros.

--- a/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
+++ b/libraries/wasm-jit/Source/Runtime/CMakeLists.txt
@@ -1,3 +1,13 @@
+# Find an installed build of LLVM
+find_package(LLVM REQUIRED CONFIG)
+
+if(LLVM_VERSION VERSION_LESS 7.1 AND CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+	enable_language(ASM-LLVMWAR)
+	set(LLVM_SHIM_FILE llvmWARshim.llvmwar)
+else()
+	set(LLVM_SHIM_FILE llvmWARshim.cpp)
+endif()
+
 set(Sources
 	Intrinsics.cpp
 	Linker.cpp
@@ -12,6 +22,7 @@ set(Sources
 	Table.cpp
 	Threads.cpp
 	WAVMIntrinsics.cpp
+	${LLVM_SHIM_FILE}
   )
 set(PublicHeaders
 	${WAVM_INCLUDE_DIR}/Runtime/Intrinsics.h
@@ -21,9 +32,6 @@ set(PublicHeaders
 include_directories(${WAVM_INCLUDE_DIR}/Runtime)
 
 add_library(Runtime STATIC ${Sources} ${PublicHeaders})
-
-# Find an installed build of LLVM
-find_package(LLVM REQUIRED CONFIG)
 
 # Include the LLVM headers
 include_directories(${LLVM_INCLUDE_DIRS})
