--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -233,7 +233,7 @@ steps:
 
   - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
     command:
-      - "./.cicd/helpers/installation-build.sh"
+      - "./.cicd/installation-build.sh"
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
