--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,17 +1,17 @@
 steps:
   - wait
 
-  - label: ":aws: Amazon_Linux 2 - Build"
-    command:
-      - "./.cicd/build.sh"
-      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
+  # - label: ":aws: Amazon_Linux 2 - Build"
+  #   command:
+  #     - "./.cicd/build.sh"
+  #     - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+  #   env:
+  #     IMAGE_TAG: "amazon_linux-2"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_AMAZON_LINUX_2
 
   - label: ":centos: CentOS 7.6 - Build"
     command:
@@ -70,81 +70,81 @@ steps:
       - "queue=mac-anka-large-node-fleet"
     skip: $SKIP_MOJAVE
 
-  - wait
+  # - wait
 
-  - label: ":aws: Amazon_Linux 2 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
-    env:
-      IMAGE_TAG: "amazon_linux-2"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNIT_TESTS}
+  # - label: ":aws: Amazon_Linux 2 - Unit Tests"
+  #   command:
+  #     - "buildkite-agent artifact download build.tar.gz . --step ':aws: Amazon_Linux 2 - Build' && tar -xzf build.tar.gz"
+  #     - "./.cicd/parallel-tests.sh"
+  #   env:
+  #     IMAGE_TAG: "amazon_linux-2"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: ${SKIP_AMAZON_LINUX_2}${SKIP_UNIT_TESTS}
 
-  - label: ":centos: CentOS 7.6 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
-    env: 
-      IMAGE_TAG: "centos-7.6"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_CENTOS_7}${SKIP_UNIT_TESTS}
+  # - label: ":centos: CentOS 7.6 - Unit Tests"
+  #   command:
+  #     - "buildkite-agent artifact download build.tar.gz . --step ':centos: CentOS 7.6 - Build' && tar -xzf build.tar.gz"
+  #     - "./.cicd/parallel-tests.sh"
+  #   env: 
+  #     IMAGE_TAG: "centos-7.6"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: ${SKIP_CENTOS_7}${SKIP_UNIT_TESTS}
 
-  - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
-    env: 
-      IMAGE_TAG: "ubuntu-16.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_16}${SKIP_UNIT_TESTS}
+  # - label: ":ubuntu: Ubuntu 16.04 - Unit Tests"
+  #   command:
+  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 16.04 - Build' && tar -xzf build.tar.gz"
+  #     - "./.cicd/parallel-tests.sh"
+  #   env: 
+  #     IMAGE_TAG: "ubuntu-16.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: ${SKIP_UBUNTU_16}${SKIP_UNIT_TESTS}
 
-  - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
-    command:
-      - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
-      - "./.cicd/parallel-tests.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_UNIT_TESTS}
+  # - label: ":ubuntu: Ubuntu 18.04 - Unit Tests"
+  #   command:
+  #     - "buildkite-agent artifact download build.tar.gz . --step ':ubuntu: Ubuntu 18.04 - Build' && tar -xzf build.tar.gz"
+  #     - "./.cicd/parallel-tests.sh"
+  #   env:
+  #     IMAGE_TAG: "ubuntu-18.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: ${SKIP_UBUNTU_18}${SKIP_UNIT_TESTS}
 
-  - label: ":darwin: macOS 10.14 - Unit Tests"
-    command:
-      - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb"
-      - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
-      - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
-      - "cd eos && ./.cicd/parallel-tests.sh"
-    plugins:
-      - chef/anka#v0.5.1:
-          no-volume: true
-          inherit-environment-vars: true
-          vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
-          always-pull: true
-          debug: true
-          wait-network: true
-    agents:
-      - "queue=mac-anka-node-fleet"
-    skip: ${SKIP_MOJAVE}${SKIP_UNIT_TESTS}
+  # - label: ":darwin: macOS 10.14 - Unit Tests"
+  #   command:
+  #     - "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb"
+  #     - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
+  #     - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
+  #     - "cd eos && ./.cicd/parallel-tests.sh"
+  #   plugins:
+  #     - chef/anka#v0.5.1:
+  #         no-volume: true
+  #         inherit-environment-vars: true
+  #         vm-name: 10.14.4_6C_14G_40G
+  #         vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+  #         always-pull: true
+  #         debug: true
+  #         wait-network: true
+  #   agents:
+  #     - "queue=mac-anka-node-fleet"
+  #   skip: ${SKIP_MOJAVE}${SKIP_UNIT_TESTS}
 
-  - label: ":pipeline: Generate Serial Test Steps"  
-    command: "./.cicd/generate-serial-tests.sh | buildkite-agent pipeline upload"
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: $SKIP_GENERATE_SERIAL_TESTS
+  # - label: ":pipeline: Generate Serial Test Steps"  
+  #   command: "./.cicd/generate-serial-tests.sh | buildkite-agent pipeline upload"
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: $SKIP_GENERATE_SERIAL_TESTS
 
   - label: ":aws: Amazon_Linux 2 - Long-Running Tests"
     command:
@@ -215,32 +215,32 @@ steps:
       - "queue=mac-anka-large-node-fleet"
     skip: ${SKIP_MOJAVE}${SKIP_LONG_RUNNING_TESTS:-true}
 
-  - wait:
-    continue_on_failure: true
+  # - wait:
+  #   continue_on_failure: true
 
-  - label: ":bar_chart: Test Metrics"
-    command: |
-      echo '+++ :compression: Extracting Test Metrics Code'
-      tar -zxf .cicd/metrics/test-metrics.tar.gz
-      echo '+++ :javascript: Running test-metrics.js'
-      node --max-old-space-size=32768 test-metrics.js
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: 10
-    soft_fail: true
+  # - label: ":bar_chart: Test Metrics"
+  #   command: |
+  #     echo '+++ :compression: Extracting Test Metrics Code'
+  #     tar -zxf .cicd/metrics/test-metrics.tar.gz
+  #     echo '+++ :javascript: Running test-metrics.js'
+  #     node --max-old-space-size=32768 test-metrics.js
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: 10
+  #   soft_fail: true
 
   - wait
 
-  - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
-    command:
-      - "./.cicd/installation-build.sh"
-    env:
-      IMAGE_TAG: "ubuntu-18.04"
-      BUILDKITE_AGENT_ACCESS_TOKEN:
-    agents:
-      queue: "automation-eos-builder-fleet"
-    timeout: ${TIMEOUT:-10}
-    skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
+  # - label: ":ubuntu: Ubuntu 18.04 - Contract Builder"
+  #   command:
+  #     - "./.cicd/installation-build.sh"
+  #   env:
+  #     IMAGE_TAG: "ubuntu-18.04"
+  #     BUILDKITE_AGENT_ACCESS_TOKEN:
+  #   agents:
+  #     queue: "automation-eos-builder-fleet"
+  #   timeout: ${TIMEOUT:-10}
+  #   skip: ${SKIP_UBUNTU_18}${SKIP_CONTRACT_BUILDER}
 
   - label: ":centos: CentOS 7.6 - Package Builder"
     command:
@@ -297,9 +297,9 @@ steps:
     timeout: 10
     skip: ${SKIP_MOJAVE}${SKIP_PACKAGE_BUILDER}
 
-  - label: ":git: Git Submodule Regression Check"
-    command:
-      - "./.cicd/submodule-regression-checker.sh"
-    agents:
-      queue: "automation-basic-builder-fleet"
-    timeout: 5
+  # - label: ":git: Git Submodule Regression Check"
+  #   command:
+  #     - "./.cicd/submodule-regression-checker.sh"
+  #   agents:
+  #     queue: "automation-basic-builder-fleet"
+  #   timeout: 5
