v 1.8.1 updates related to block_exporter

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ endif()
 set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
 set(BUILD_DOXYGEN FALSE CACHE BOOL "Build doxygen documentation on every make")
 set(BUILD_MONGO_DB_PLUGIN FALSE CACHE BOOL "Build mongo database plugin")
-set(BUILD_UOS_BLOCKS_EXPORTER TRUE CACHE BOOL "Build UOS blocks exporter")
+set(BUILD_UOS_BLOCKS_EXPORTER FALSE CACHE BOOL "Build UOS blocks exporter")
 
 # add defaults for openssl
 if ("${OPENSSL_ROOT_DIR}" STREQUAL "")
