--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -70,7 +70,7 @@ steps:
   #     - "queue=mac-anka-large-node-fleet"
   #   skip: $SKIP_MOJAVE
 
-  # - wait
+  - wait
 
   # - label: ":aws: Amazon_Linux 2 - Unit Tests"
   #   command:
