--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -249,6 +249,8 @@ steps:
     env:
       IMAGE_TAG: "centos-7.6"
       BUILDKITE_AGENT_ACCESS_TOKEN:
+      OS: "el7" # OS and PKGTYPE required for lambdas
+      PKGTYPE: "rpm"
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
@@ -261,6 +263,8 @@ steps:
     env:
       IMAGE_TAG: "ubuntu-16.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
+      OS: "ubuntu-16.04" # OS and PKGTYPE required for lambdas
+      PKGTYPE: "deb"
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
@@ -273,6 +277,8 @@ steps:
     env:
       IMAGE_TAG: "ubuntu-18.04"
       BUILDKITE_AGENT_ACCESS_TOKEN:
+      OS: "ubuntu-18.04" # OS and PKGTYPE required for lambdas
+      PKGTYPE: "deb"
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
