--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -1,17 +1,29 @@
 steps:
   - wait
 
-  - label: ":aws: Amazon_Linux 2 - Build"
+  - label: ":centos: CentOS 7.6 - Build"
     command:
       - "./.cicd/build.sh"
       - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
-    env:
-      IMAGE_TAG: "amazon_linux-2-pinned"
+    env: 
+      IMAGE_TAG: "centos-7.6-pinned"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
-    skip: $SKIP_AMAZON_LINUX_2
+    skip: $SKIP_CENTOS_7
+
+  - label: ":ubuntu: Ubuntu 18.04 - Build"
+    command:
+      - "./.cicd/build.sh"
+      - "tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
+    env:
+      IMAGE_TAG: "ubuntu-18.04-pinned"
+      BUILDKITE_AGENT_ACCESS_TOKEN:
+    agents:
+      queue: "automation-eos-builder-fleet"
+    timeout: ${TIMEOUT:-10}
+    skip: $SKIP_UBUNTU_18
 
 #   - label: ":aws: Amazon_Linux 2 - Build"
 #     command:
@@ -63,7 +75,7 @@ steps:
 
 #   - label: ":darwin: macOS 10.14 - Build"
 #     command:
-#       - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb"
+#        "brew install git graphviz libtool gmp llvm@4 pkgconfig python python@2 doxygen libusb openssl boost@1.70 cmake mongodb ccache"
 #       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
 #       - "cd eos && ./.cicd/build.sh"
 #       - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
