--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -51,7 +51,6 @@ steps:
 
   - label: ":darwin: macOS 10.14 - Build"
     command:
-      - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && ./.cicd/build.sh"
       - "cd eos && tar -pczf build.tar.gz build && buildkite-agent artifact upload build.tar.gz"
@@ -60,7 +59,7 @@ steps:
           no-volume: true
           inherit-environment-vars: true
           vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
           modify-cpu: 12
           modify-ram: 24
           always-pull: true
@@ -122,7 +121,6 @@ steps:
 
   - label: ":darwin: macOS 10.14 - Unit Tests"
     command:
-      - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
       - "cd eos && ./.cicd/parallel-tests.sh"
@@ -131,7 +129,7 @@ steps:
           no-volume: true
           inherit-environment-vars: true
           vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
           always-pull: true
           debug: true
           wait-network: true
@@ -196,7 +194,6 @@ steps:
 
   - label: ":darwin: macOS 10.14 - Long-Running Tests"
     command:
-      - "brew install git cmake automake libtool openssl wget gmp llvm@4 python python@2 doxygen graphviz mongodb"
       - "git clone $BUILDKITE_REPO eos && cd eos && git checkout $BUILDKITE_COMMIT && git submodule update --init --recursive"
       - "cd eos && buildkite-agent artifact download build.tar.gz . --step ':darwin: macOS 10.14 - Build' && tar -xzf build.tar.gz"
       - "cd eos && ./.cicd/long-running-tests.sh"
@@ -205,7 +202,7 @@ steps:
           no-volume: true
           inherit-environment-vars: true
           vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
           modify-cpu: 12
           modify-ram: 24
           always-pull: true
@@ -288,7 +285,7 @@ steps:
           no-volume: true
           inherit-environment-vars: true
           vm-name: 10.14.4_6C_14G_40G
-          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent"
+          vm-registry-tag: "clean::cicd::git-ssh::nas::brew::buildkite-agent::eosio_1.7-v2"
           always-pull: true
           debug: true
           wait-network: true
