--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -156,7 +156,7 @@ steps:
       - "buildkite-agent artifact download build.tar.gz . --step ':fedora: Fedora 27 - Build' && tar -xzf build.tar.gz"
       - "./.cicd/parallel-tests.sh"
     env:
-      IMAGE_TAG: "ubuntu-18.04"
+      IMAGE_TAG: "fedora-27"
       BUILDKITE_AGENT_ACCESS_TOKEN:
     agents:
       queue: "automation-eos-builder-fleet"
