SKIPS for unpinned

--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -6,6 +6,8 @@ steps:
     agents:
       queue: "automation-eos-builder-fleet"
     timeout: ${TIMEOUT:-10}
+  
+  - wait
 
   - label: ":git: Git Submodule Regression Check"
     command:
