Create trigger for LRTs.

--- a/.cicd/pipeline.yml
+++ b/.cicd/pipeline.yml
@@ -6,3 +6,15 @@ steps:
     agents:
       queue: "automation-basic-builder-fleet"
     timeout: ${TIMEOUT:-10}
+
+  - label: ":pipeline: Trigger LRTs"
+    trigger: "eosio-lrts"
+    build:
+      message: "${BUILDKITE_MESSAGE}"
+      commit: "${BUILDKITE_COMMIT}"
+      branch: "${BUILDKITE_BRANCH}"
+      env:
+        BUILDKITE_PULL_REQUEST: "${BUILDKITE_PULL_REQUEST}"
+        BUILDKITE_PULL_REQUEST_BASE_BRANCH: "${BUILDKITE_PULL_REQUEST_BASE_BRANCH}"
+        BUILDKITE_PULL_REQUEST_REPO: "${BUILDKITE_PULL_REQUEST_REPO}"
+    skip: ${SKIP_LONG_RUNNING_TESTS:-false}
